--- a/pynecone/.templates/web/package.json
+++ b/pynecone/.templates/web/package.json
@@ -6,11 +6,12 @@
     "prod": "next start"
   },
   "dependencies": {
-    "@chakra-ui/system": "1.12.1",
     "@chakra-ui/icons": "1.1.7",
     "@chakra-ui/react": "1.8.8",
+    "@chakra-ui/system": "1.12.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "autoprefixer": "^10.4.13",
     "axios": "^0.27.2",
     "focus-visible": "^5.2.0",
     "framer-motion": "^6.3.3",
@@ -18,6 +19,7 @@
     "gridjs-react": "^4.0.0",
     "next": "^12.1.0",
     "plotly.js": "2.6.4",
+    "postcss": "^8.4.20",
     "prettier": "^2.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -26,6 +28,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "rehype-katex": "^6.0.2",
     "remark-gfm": "^3.0.1",
-    "remark-math": "^5.1.1"
+    "remark-math": "^5.1.1",
+    "tailwindcss": "^3.2.4"
   }
 }
